--- a/petstore.html
+++ b/petstore.html
@@ -59,7 +59,7 @@
 					</div>
 					<div class="col-xs-6 col-sm-12">
 						<h4>Cat Toys</h4>
-						<p>The best dog bowl for your dog.</p>
+						<p>The best cat toys for your cat.</p>
 						<a href="#" class="btn btn-info btn-xs">purchase now</a>
 					</div>
 				</div>
@@ -73,7 +73,7 @@
 					</div>
 					<div class="col-xs-6 col-sm-12">
 						<h4>Parrot Stuff</h4>
-						<p>The best dog bowl for your dog.</p>
+						<p>The best parrot stuff for your parrot.</p>
 						<a href="#" class="btn btn-info btn-xs">purchase now</a>
 					</div>
 				</div>
@@ -102,6 +102,15 @@
 	<footer>
 		<div class="row">
 			<img src="img/petstore_logo.png" class="logo">
+		</div>
+		<div class="col-xs-6 col sm-4 contact-info">
+			<address>
+				<a href="#">
+					Pet Store<br>
+					Fresno, CA<br>
+				</a>
+				<a href="#">info@petstore.com</a>
+			</address>
 		</div>
 	</footer>	
 </body>
