--- a/petstore.html
+++ b/petstore.html
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Pet Store</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	<section class="container">
 		<header class="row">
-			<div class="col-xs-8 col-sm-4 col-md-6">
+			<div class="col-xs-8 col-sm-4 col-md-6 center">
 				<img class="logo pull-left" src="img/petstore_logo.png" alt="Pet Store Logo">
 				<h1 class="pull-left text-center"> Pet Store</h1>
 			</div>
@@ -36,48 +37,44 @@
 			<div class="col-sm-7 text-justify featured">
 				<h2 class="text-uppercase">featured</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ipsum harum iste odio dolor, deleniti, architecto aliquid magnam nostrum quidem temporibus voluptatibus provident quod similique aspernatur ullam nisi doloremque ipsam?</p>
-
-		<div class="row">
-			<div class="col-sm-4 product">
 				<div class="row">
-					<div class="col-xs-6 col-sm-12 img-box">
-						<img src="img/product1.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="col-xs-6 col-sm-12">
-						<h4>Dog Bowl</h4>
-						<p>The best dog bowl for your dog.</p>
-						<a href="#" class="btn btn-info btn-xs">purchase now</a>
-					</div>
+					<div class="col-sm-4 product">
+						<div class="row">
+							<div class="col-xs-6 col-sm-12 img-box">
+								<img src="img/product1.jpg" alt="" class="img-responsive">
+							</div>
+							<div class="col-xs-6 col-sm-12">
+								<h4>Dog Bowl</h4>
+								<p>The best dog bowl for your dog.</p>
+								<a href="#" class="btn btn-info btn-xs">purchase now</a>
+							</div>
+						</div>
+					</div> <!-- end of first product -->
+					<div class="col-sm-4 product">
+						<div class="row">
+							<div class="col-xs-6 col-sm-12 img-box">
+								<img src="img/product2.jpg" alt="" class="img-responsive">
+							</div>
+							<div class="col-xs-6 col-sm-12">
+								<h4>Cat Toy</h4>
+								<p>The best cat toy for your favorite cat.</p>
+								<a href="#" class="btn btn-info btn-xs">purchase now</a>
+							</div>
+						</div>
+					</div> <!-- end of second product -->
+					<div class="col-sm-4 product">
+						<div class="row">
+							<div class="col-xs-6 col-sm-12 img-box">
+								<img src="img/product3.jpg" alt="" class="img-responsive">
+							</div>
+							<div class="col-xs-6 col-sm-12">
+								<h4>Parrot Stuff</h4>
+								<p>The best parrot stuff for your parrot.</p>
+								<a href="#" class="btn btn-info btn-xs">purchase now</a>
+							</div>
+						</div>
+					</div> <!-- end of third product -->
 				</div>
-			</div>
-
-			<div class="row">
-			<div class="col-sm-4 product">
-				<div class="row">
-					<div class="col-xs-6 col-sm-12 img-box">
-						<img src="img/product2.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="col-xs-6 col-sm-12">
-						<h4>Cat Toys</h4>
-						<p>The best cat toys for your cat.</p>
-						<a href="#" class="btn btn-info btn-xs">purchase now</a>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-			<div class="col-sm-4 product">
-				<div class="row">
-					<div class="col-xs-6 col-sm-12 img-box">
-						<img src="img/product3.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="col-xs-6 col-sm-12">
-						<h4>Parrot Stuff</h4>
-						<p>The best parrot stuff for your parrot.</p>
-						<a href="#" class="btn btn-info btn-xs">purchase now</a>
-					</div>
-				</div>
-			</div>
 			</div> <!-- end of featured section -->
 			<div class="col-sm-3 col-sm-offset-2">
 				<h2 class="text-center text-uppercase">services</h2>
@@ -99,20 +96,48 @@
 			</div>
 		</div> <!-- end of row -->
 	</section> <!-- end of content container -->
+
 	<footer>
-		<div class="row">
-			<img src="img/petstore_logo.png" class="logo">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-6 col-sm-4">
+					<img class="logo" src="img/petstore_logo.png" alt="Pet Store Logo">
+				</div> <!-- logo section -->
+				<div class="col-xs-6 col-sm-4 contact-info">
+					<address>
+						<a href="#">
+							Pet Store<br>
+							Fresno, CA<br>
+						</a>
+						<a href="#">info@petstore.com</a>
+					</address>
+				</div> <!-- address section -->
+				<div class="col-xs-12 col-sm-4 social">
+					<a href="">
+						<i class="fa fa-facebook"></i>
+						<span class="hidden-xs">Facebook</span>
+					</a>
+					<br class="hidden-xs">
+					<a href="">
+						<i class="fa fa-twitter"></i>
+						<span class="hidden-xs">Twitter</span>
+					</a>
+					<br class="hidden-xs">
+					<a href="">
+						<i class="fa fa-linkedin"></i>
+						<span class="hidden-xs">LinkedIn</span>
+					</a>
+				</div> <!-- social section -->
+			</div>
+			<div class="row">
+				<div class="col-sm-12 fine-print text-center">
+					<p>&copy; Pet Store, Inc. All rights reserved.</p>
+				</div>
+			</div>
 		</div>
-		<div class="col-xs-6 col sm-4 contact-info">
-			<address>
-				<a href="#">
-					Pet Store<br>
-					Fresno, CA<br>
-				</a>
-				<a href="#">info@petstore.com</a>
-			</address>
-		</div>
-	</footer>	
+	</footer>
+	
+	
 </body>
 </html>
 
